--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "redux": "^4.0.5",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "swiper": "4.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
